tests/errors/slice-owner-index-move.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let [first, rest @ ..]: Vec[own i64] = [make_owned(1), make_owned(2)];
  let second = rest[0];
  drop first;
  drop second;
  return 0;
}
